--- a/next-frontend/package.json
+++ b/next-frontend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev -p 8000",
     "build": "next build",
-    "start": "next start"
+    "start": "next start -p 8000"
   },
   "dependencies": {
     "bootstrap": "5.0.0",
